fix(toolbox): Fix overflow in toolbox
Aftere changes I made to the toobox, it has started to overflow
beyond the footer. I have now added styling to fix this.

IssueID EODHP-628

--- a/src/pages/MapViewer/components/Toolbox/styles.scss
+++ b/src/pages/MapViewer/components/Toolbox/styles.scss
@@ -1,11 +1,8 @@
 @import '@/styles/main';
 
 .toolbox {
-  min-width: 450px;
-  max-width: 450px;
-  min-height: 550px;
+  width: 450px;
   z-index: 99999;
-  position: relative;
 
   &-content-container {
     height: 100%;
@@ -41,9 +38,8 @@
   }
 
   &__content {
-    position: relative;
-    margin-top: 27px;
     height: 100%;
+    overflow-y: auto;
   }
 
   &--hidden {
